Fix cronlib call to task shift function in pro version

--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,19 @@ table * td {
     text-align:right;
     padding-right:20px;
 }
+
+.userreport-col0 {
+    width:55%;
+}
+.userreport-col1 {
+    width:15%;
+    text-align:center;
+}
+.userreport-col2 {
+    width:15%;
+    text-align:center;
+}
+.userreport-col3 {
+    width:15%;
+    text-align:right;
+}
